# thoth-ui

./: .env  Cargo.toml  README.md  Trunk.toml  build.rs  index.html  main.js  tailwind.css  thoth.css
src/: main.rs  route.rs  string.rs
src/component/: books.rs  mod.rs  navbar.rs  root.rs  utils.rs
src/component/book/: book.rs  mod.rs  navbar.rs
src/models/: mod.rs  utils.rs
src/models/book/: book_query.rs  books_query.rs  mod.rs
