[package]
name = "thoth-ui"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
anyhow = "1.0.86"
chrono = { version = "0.4.38", features = ["serde"] }
getrandom = { version = "0.2.15", features = ["js"] }
gloo-timers = "0.3.0"
isbn2 = "0.4.0"
juniper = "0.15.12"
lazy_static = "1.4.0"
log = "0.4.22"
regex = "1.10.2"
reqwest = { version = "0.12.5", features = ["json"] }
semver = "1.0.23"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.26.1", features = ["derive"] }
thiserror = "1.0.63"
url = "2.5.2"
uuid = { version = "1.10.0", features = ["serde"] }
wasm-bindgen = "0.2.92"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.69", features = [
    "HtmlInputElement",
    "HtmlSelectElement",
    "HtmlTextAreaElement",
] }
yew = "0.19.3"
yew-agent = "0.1.0"
yew-router = "0.16.0"
yewtil = { version = "0.4.0", features = ["fetch"] }

[build-dependencies]
dotenv = "0.15.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
csv = "1.3.0"
dialoguer = { version = "0.11.0", features = ["password"] }
reqwest-middleware = "0.2.4"
marc = { version = "3.1.1", features = ["xml"] }
phf = { version = "0.11", features = ["macros"] }
xml-rs = "0.8.19"
